@@ -495,6 +495,8 @@ Trunk (Unreleased)
     HADOOP-12107. long running apps may have a huge number of StatisticsData
     instances under FileSystem (Sangjin Lee via Ming Ma)
 
+    HADOOP-11762. Enable swift distcp to secure HDFS (Chen He via aw)
+
   OPTIMIZATIONS
 
     HADOOP-7761. Improve the performance of raw comparisons. (todd)
